--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -33,10 +33,11 @@
         {{{ body }}}
       </div>
       <div class="col-md-4">
-
+        {{>stats}}
+        {{>popular}}
+        {{>comments}}
       </div>
     </div>
-
   </div>
 
   <!-- SCRIPS -->
